@@ -1,5 +1,5 @@
 %  WaveForm DataBase (WFDB) Toolbox 
-%  Version 0.9.4.3 
+%  Version 0.9.5
 % 
 %  Last Updated November 6, 2013
 %
@@ -19,7 +19,8 @@
 % -----------------------
 %   ann2rr          - Extract a list of intervals from an annotation file
 %   bxb             - ANSI/AAMI-standard beat-by-beat annotation comparator.
-%   lomb			- Estimate power spectrum using the Lomb periodogram method	
+%   edr             - Derives a respiration signal from an ECG signal.
+%   lomb			- Estimates power spectrum using the Lomb periodogram method	
 %   mat2wfdb        - Writes a MATLAB variable into a WDFB record file
 %   maprecord       - Perform multithread batch processing of WFDB records 
 %   mrgann          - Merge annotation files
@@ -34,6 +35,7 @@
 %	sumann			- Summarize the contents of a WFDB annotation file
 %	tach            - Calculates instantaneous heart rate of a WFDB ECG record signal
 %   wfdb            - Prints this help information of the Toolbox
+%   wfdbexec        - Executes a system call to any installed native WFDB command.
 %   wabp			- Arterial blood pressure (ABP) pulse detector
 %   wfdbdemo        - Demonstration of the WFDB App Toolbox
 %   wfdbdesc        - Return signal information for about a WFDB record
